# ChangeLog for dev-python/pyyaml
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyyaml/ChangeLog,v 1.29 2013/01/17 22:57:12 chutzpah Exp $

*pyyaml-3.10-r1 (17 Jan 2013)

  17 Jan 2013; Patrick McLean <chutzpah@gentoo.org> +pyyaml-3.10-r1.ebuild:
  Revision bump, port to distutils-r1

  01 Jul 2012; Akinori Hattori <hattya@gentoo.org> pyyaml-3.10.ebuild:
  keyword ~ia64.

  09 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> pyyaml-3.10.ebuild:
  x86 stable wrt bug #400337

  08 Mar 2012; Brent Baude <ranger@gentoo.org> pyyaml-3.10.ebuild:
  Marking pyyaml-3.10 ppc64 for bug 400337

  06 Mar 2012; Brent Baude <ranger@gentoo.org> pyyaml-3.10.ebuild:
  Marking pyyaml-3.10 ppc for bug 400337

  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org> pyyaml-3.10.ebuild:
  Stable for amd64, wrt bug #400337

*pyyaml-3.10 (10 Jul 2011)

  10 Jul 2011; Stefan Briesenick <sbriesen@gentoo.org> +pyyaml-3.10.ebuild:
  version bump. new version supports python 3.2. solving bug #318925.

  30 Sep 2010; Fabian Groffen <grobian@gentoo.org> pyyaml-3.09.ebuild:
  Marked ~ppc-macos, ~x86-solaris

  14 Sep 2010; Jonathan Callen <abcd@gentoo.org> pyyaml-3.09.ebuild:
  Add ~amd64-linux ~x64-macos for bug 337200

  06 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> pyyaml-3.09.ebuild:
  ppc64 stable wrt #287629

  30 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pyyaml-3.09.ebuild:
  Don't use NEED_PYTHON.

  24 Oct 2009; nixnut <nixnut@gentoo.org> pyyaml-3.09.ebuild:
  ppc stable #287629

  15 Oct 2009; Markus Meier <maekke@gentoo.org> pyyaml-3.09.ebuild:
  amd64/x86 stable, bug #287629

  11 Oct 2009; Fabian Groffen <grobian@gentoo.org> pyyaml-3.09.ebuild:
  Merge from Prefix

  05 Sep 2009; Brent Baude <ranger@gentoo.org> pyyaml-3.08.ebuild:
  Marking pyyaml-3.08 ppc64 for bug 277972

  05 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pyyaml-3.09.ebuild: