@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyyaml/pyyaml-3.10-r1.ebuild,v 1.1 2013/01/17 22:57:12 chutzpah Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyyaml/pyyaml-3.10-r1.ebuild,v 1.2 2013/02/16 22:21:47 mgorny Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_5,2_6,2_7,3_1,3_2,3_3} )
@@ -18,8 +18,9 @@ SLOT="0"
 KEYWORDS="~amd64 ~arm ~ia64 ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x86-solaris"
 IUSE="examples libyaml"
 
-DEPEND="libyaml? ( dev-libs/libyaml dev-python/pyrex )"
 RDEPEND="libyaml? ( dev-libs/libyaml )"
+DEPEND="${RDEPEND}
+	libyaml? ( dev-python/cython[${PYTHON_USEDEP}] )"
 
 S="${WORKDIR}/${MY_P}"
 
@@ -27,10 +28,14 @@ python_configure_all() {
 	mydistutilsargs=($(use_with libyaml))
 }
 
-src_install() {
-	distutils-r1_src_install
+python_test() {
+	esetup.py test
+}
+
+python_install_all() {
+	distutils-r1_python_install_all
 	if use examples; then
-		insinto /usr/share/doc/${PF}/examples
-		doins -r examples/.
+		dodoc -r examples
+		docompress -x /usr/share/doc/${PF}
 	fi
 }
