@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyyaml
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyyaml/ChangeLog,v 1.29 2013/01/17 22:57:12 chutzpah Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyyaml/ChangeLog,v 1.30 2013/02/16 22:21:47 mgorny Exp $
+
+  16 Feb 2013; Michał Górny <mgorny@gentoo.org> pyyaml-3.10-r1.ebuild:
+  Fix the dependencies, fix installing examples and run tests.
 
 *pyyaml-3.10-r1 (17 Jan 2013)
 
